syntax = "proto3";
option go_package = "github.com/vemolista/itu-distributed-systems-assignment3/v2/grpc";

message JoinRequest {
    string username = 1;
}

message JoinResponse {
    string message = 1;
}


message LeaveRequest {
    string username = 1;
}

message LeaveResponse {}


message ReceiveMessagesRequest {}
message ReceiveMessagesRespose {}

message SendMessageRequest {
    ChatMessage message = 1;
    int64 logical_timestamp = 2;
}

message SendMessageResponse {}


message ChatMessage {
    string username = 1;
    string content = 2;
    MessageType type = 3;
}

enum MessageType {
    USER_MESSAGE = 0;
    SYSTEM_JOIN = 1;
    SYSTEM_LEAVE = 2;
}

service ChitChat {
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Leave(LeaveRequest) returns (LeaveResponse);
    rpc ReceiveMessages(ReceiveMessagesRequest) returns (stream ReceiveMessagesRespose);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}